welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Missing closing brace `}' assumed here
override def run() {
^SnakeBuggle:1: error: expected start of definition
override def run() {
         ^SnakeBuggle:3: error: Missing closing brace `}' assumed here
def postion_finale(){
^SnakeBuggle:3: error: expected class or object definition
def postion_finale(){
^SnakeBuggle:8: error: Missing closing brace `}' assumed here
  gauche();
  ^